M       templates_animals/monkey_oldworld_Template_5.nii
M       templates_animals/monkey_oldworld_Template_6.nii
M       templates_animals/monkey_oldworld_brainmask.nii
M       templates_animals/monkey_oldworld_vbm12.nii

(1) Changed:    Separate the bias, noise and intensity corrected image (Ym)  
                into two subversion with global (Ym) and local (Ymi) intensity 
                normalization. The Ym is more reasonable for myelination 
                analysis, whereas the Ymi more sensible for the tissue classes.
                Also for Ym LAS is used to correct reminding WM inhomogeneities.
                The output of the local normalized image is only assessable via
                cat_defaults (cat.output.las) and expert GUI.
                The CAT ROIs will extract the intensities of the Ym rather of 
                the Ymi. The CAT report now shows the Ym rather than the Ymi.
(2) Changed:    Added ROI menu to expert GUI.
(3) Fixed:      Volume creation error in TCA part of cat_surf_createCS.
(4) Fixed:      Update version of cat_surf_render.
(5) Changed:    Added surface type check in cat_surf_resamp to ignore
                '.central.' and '.sphere.'.                
(6) Fixed:      Fast correction of side flip in animal atlas maps. 

------------------------------------------------------------------------
r969 | dahnke | 2016-07-21 14:34:10 +0200 (Do, 21 Jul 2016) | 7 lines

Changed paths:
M       CHANGES.txt
M       cat_surf_createCS.m

(1) Fixed:      Volume creation error in TCA part of cat_surf_createCS (part 2).


------------------------------------------------------------------------

Changed paths:
M       CHANGES.txt
M       Contents.m
M       cat_surf_render.m
M       html/cat.html

Fixed: cat_surf_render did not work properly for all matlab version, now use
old version again.
------------------------------------------------------------------------
r970 | gaser | 2016-07-22 12:55:49