@@ -1494,10 +1494,10 @@ cat_io_writenii(VT0,Ym.*(Yp0>0.1),mrifolder,'m', ...
 % bias, noise and local intensity corrected without masking for subject space and with masking for other spaces 
 cat_io_writenii(VT0,Ymi,mrifolder,'mi', ...
   'bias and noise corrected, local intensity normalized','uint16',[0,0.0001], ... 
-  min([1 0 2],[job.output.bias.native job.output.bias.warped job.output.bias.dartel]),trans);
+  min([1 0 2],[job.output.las.native job.output.las.warped job.output.las.dartel]),trans);
 cat_io_writenii(VT0,Ymi.*(Yp0>0.1),mrifolder,'mi', ... 
   'bias and noise corrected, local intensity normalized (masked due to normalization)','uint16',[0,0.0001], ...
-  min([0 1 0],[job.output.bias.native job.output.bias.warped job.output.bias.dartel]),trans);
+  min([0 1 0],[job.output.las.native job.output.las.warped job.output.las.dartel]),trans);
   
 % Yp0b maps
 if job.extopts.WMHC==3 && job.extopts.WMHCstr>0 && ~job.inv_weighting; 
